<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>farmbot_bringup</name>
  <version>1.0.0</version>
  <description>Package containing all the launch files for the ROS2 Farmbot</description>
  <maintainer email="jamespetri28@gmail.com">James</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>farmbot_controllers</exec_depend>
  <exec_depend>farmbot_command_handler</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
