<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>farmbot_command_handler</name>
  <version>1.0.0</version>
  <description>
    Package specifically designed for the ROS2 Farmbot Architecture.
    Deals with command handling from the input nodes by translating
    them to the FCode that is used to communicate with the Farmbot's
    Farmduino.

    Dependency on the farmbot_interfaces package!
  </description>
  <maintainer email="james.petri@mu.ie">James</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>farmbot_interfaces</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
