<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>farmbot_hardware_comm</name>
  <version>0.1.1</version>
  <description>Package containing the hardware communication for the ROS2 Farmbot</description>
  <maintainer email="salome.deoliveira.2026@mumail.ie">Salome</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>farmbot_interfaces</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
